
cmake_minimum_required (VERSION 3.10 FATAL_ERROR)
project (Outmoded VERSION 0.1.0 LANGUAGES CXX)
SET( CMAKE_CXX_STANDARD 14 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")

IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    message("DEBUG MODE ENABLED")
    ADD_DEFINITIONS(-DASSERTIONS_ENABLED)
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules")

include_directories(include)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(outmoded)